<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Snake</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="credit_line">Credits</string>
	<string name="btn_text_new">Start New Game</string>
	<string name="btn_text_resume">Resume Game</string>
	<string name="btn_text_setting">Settings</string>
	<string name="btn_text_help">Help</string>
	<string name="btn_text_credit">Credits</string>
	<string name="btn_text_exit">Quit</string>
	<string name="btn_left">Left</string>
	<string name="btn_right">Right</string>
	<string name="btn_up">Up</string>
	<string name="btn_down">Down</string>
	<string name="btn_back">Back</string>
</resources>
