<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FF000000" >

    <LinearLayout android:id="@+id/main_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
		android:layout_centerVertical="true"
		android:layout_centerHorizontal="true"
        android:orientation="vertical" >

        <Button
            android:id="@+id/btn_new"
            android:layout_width="200dp"
            android:layout_height="0dp"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:onClick="onClick"
            android:textColor="@color/FontColor"
            android:text="@string/btn_text_new" />

        <Button
            android:id="@+id/btn_resume"
            android:layout_width="200dp"
            android:layout_height="0dp"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:onClick="onClick"
            android:textColor="@color/FontColor"
            android:text="@string/btn_text_resume" />

        <Button
            android:id="@+id/btn_setting"
            android:layout_width="200dp"
            android:layout_height="0dp"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:onClick="onClick"
            android:textColor="@color/FontColor"
            android:text="@string/btn_text_setting" />

        <Button
            android:id="@+id/btn_help"
            android:layout_width="200dp"
            android:layout_height="0dp"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:onClick="onClick"
            android:textColor="@color/FontColor"
            android:text="@string/btn_text_help" />

        <Button
            android:id="@+id/btn_credit"
            android:layout_width="200dp"
            android:layout_height="0dp"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:onClick="onClick"
            android:textColor="@color/FontColor"
            android:text="@string/btn_text_credit" />
        
        <Button
            android:id="@+id/btn_exit"
            android:layout_width="200dp"
            android:layout_height="0dp"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:onClick="onClick"
            android:textColor="@color/FontColor"
            android:text="@string/btn_text_exit" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/credit_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:visibility="invisible" 
		android:background="#B0C0C0C0" >
        
       	<ImageView
            android:id="@+id/imageView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/images" />
        <TextView 
            android:id="@+id/credit_view_line1"
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:gravity="center"
            android:layout_gravity="center"
            android:text="@string/credit_line"
            android:textStyle="bold"
            android:textSize="20sp"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <TextView
            android:id="@+id/credit_view_line2"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:gravity="center"
            android:layout_gravity="center"
            android:textStyle="bold"
            android:textAppearance="?android:attr/textAppearanceLarge" />
        
    </LinearLayout>
        
</RelativeLayout>
