<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal" >
    
    <RelativeLayout 
        android:id="@+id/parent"
        android:layout_width="wrap_content" 
        android:layout_height="wrap_content" 
        android:visibility="invisible">

		<com.example.snake.Canvas
		    android:id="@+id/canvas1"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content" />

  	</RelativeLayout>
  	
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal" >

  	
    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="bottom"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="vertical" >

            <Button
                android:id="@+id/btn_setting"
                style="?android:attr/buttonStyleSmall"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="onClick"
                android:text="@string/btn_text_setting" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1.00" >

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1" >

            <Button
                android:id="@+id/btn_left"
                style="?android:attr/buttonStyleSmall"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:onClick="onClick"
                android:text="@string/btn_left" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical" >

                <Button
                    android:id="@+id/btn_up_left"
                    style="?android:attr/buttonStyleSmall"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:onClick="onClick"
                    android:text="@string/btn_up" />

                <Button
                    android:id="@+id/btn_down_left"
                    style="?android:attr/buttonStyleSmall"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:onClick="onClick"
                    android:text="@string/btn_down" />
            </LinearLayout>

        </LinearLayout>
	
    </LinearLayout>
    
    <LinearLayout
       	android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="3"
        android:orientation="vertical" >
     </LinearLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1.00"
        android:gravity="bottom"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="right" >
    		
        	<Button
        	    android:id="@+id/btn_back"
        	    style="?android:attr/buttonStyleSmall"
        	    android:layout_width="match_parent"
        	    android:layout_height="wrap_content"
        	    android:onClick="onClick"
        	    android:text="@string/btn_back" />

        </LinearLayout>
        
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1.00"
            android:gravity="top"
            android:orientation="vertical" >

    	</LinearLayout>
   		
   		<LinearLayout
   		    android:layout_width="match_parent"
   		    android:layout_height="0dp"
   		    android:layout_weight="1.00"
   		    android:orientation="horizontal" >

    		<LinearLayout  
    		    android:layout_weight="1"
        		android:layout_width="0dp"
    			android:layout_height="wrap_content"
    			android:layout_gravity="bottom"
    			android:orientation="vertical" >
    	
    			<Button
    			    android:id="@+id/btn_up_right"
    			    style="?android:attr/buttonStyleSmall"    			    
    			    android:layout_weight="1"
    			    android:layout_width="match_parent"
    			    android:layout_height="0dp"
    			    android:onClick="onClick"
    			    android:text="@string/btn_up" />

    			<Button
    		    	android:id="@+id/btn_down_right"
        			style="?android:attr/buttonStyleSmall"
        			android:layout_weight="1.00"
    		    	android:layout_width="match_parent"
    		   	 	android:layout_height="0dp"
    		   	 	android:onClick="onClick"
    		    	android:text="@string/btn_down" />

			</LinearLayout>

        	<Button
           	 	android:id="@+id/btn_right"
        		style="?android:attr/buttonStyleSmall"
        		android:layout_weight="1"
        		android:layout_width="0dp"
            	android:layout_height="wrap_content"
            	android:layout_gravity="center_vertical"
            	android:onClick="onClick"
            	android:text="@string/btn_right" />
        	
    	</LinearLayout>
	</LinearLayout>
	</LinearLayout>
</RelativeLayout>